Correções nos retornos em JSON e atualizações no Swagger
